<?xml version="1.0"?>
<package format="2">
  <name>fusion_tracker</name>
  <version>0.0.0</version>
  <description>The fusion_tracker package</description>
  
  <maintainer email="jfjxxdy2007@126.com">larrydong</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>dvs_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  
</package>
